--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bikeshopweb",
   "version": "1.0.0",
   "description": "Bikeshop catalog inventory ",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/yerkodigo/bikeShopInventory/issues"
   },
-  "homepage": "https://github.com/yerkodigo/bikeShopInventory#readme"
+  "homepage": "https://github.com/yerkodigo/bikeShopInventory#readme",
+  "dependencies": {
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
+  }
 }
