--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "pg": "^8.7.1"
   }
 }
